User Edit page added

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,8 +1,10 @@
+$darkGray: rgb(50, 50, 50);
+
 a {
-  color: black;
+  color: $darkGray;
 }
 
 a:hover {
-  color: black;
+  color: $darkGray;
   text-decoration: none;
 }
